--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,9 @@
 Iago Toral Quiroga <itoral@igalia.com>
+* Core development
+
 Juan A. Suarez Romero <jasuarez@igalia.com>
+* Core development
+
+Víctor Manuel Jáquez Leal <vjaquez@igalia.com>
+* Vala bindings
 
