--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+NEW in 0.1.3
+============
+
+  * Added ranks to plugins
+  * Added functions to search sources by capabilities
+  * Added a new metadata key: Bitrate
+  * Test-UI: some improvements
+  * Documentation: add gtk-doc for GrlMediaPlugin and GrlMetadataSource
+
+
 NEW in 0.1.2
 ============
 
