--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+grilo-0.1 (0.1.3-1) unstable; urgency=low
+
+  * Added ranks to plugins
+  * Added functions to search sources by capabilities
+  * Gtk-doc for GrlMediaPlugin and GrlMetadataSource
+
+ -- Juan A. Suarez Romero <jasuarez@igalia.com>  Mon, 01 Mar 2010 11:13:35 +0100
+
 grilo-0.1 (0.1.2-1) unstable; urgency=low
 
   * Improved Vala bindings
