--- a/TODO
+++ b/TODO
@@ -1,3 +1,14 @@
 - Handle GRL_RESOLVE_FULL when a certain key can be resolved by several plugins.
-  -> Use rankings
   -> Use alternative plugins if the selected one fails to resolve the key.
+- Consider using GAsync callback interface for callback implementations.
+  -> Also check issues for binding development related to this.
+- Consider using the Ethos GObject plugin framework to replace our current
+in-house plugin system.
+- Implement set_metadata interface.
+  -> Think how this would work out with plugins (i.e. a plugin for storing
+ratings, play-counts, etc).
+- Multiple-plugin operations (i.e. search by text on all plugins).
+- Python bindings.
+- Consider a more flexible post-processing mechanism for query
+operations (browse, search, etc).
+  -> We have to figure out if that's really necessary.
