--- a/TODO
+++ b/TODO
@@ -4,11 +4,10 @@
   -> Also check issues for binding development related to this.
 - Consider using the Ethos GObject plugin framework to replace our current
 in-house plugin system.
-- Implement set_metadata interface.
-  -> Think how this would work out with plugins (i.e. a plugin for storing
-ratings, play-counts, etc).
 - Multiple-plugin operations (i.e. search by text on all plugins).
-- Python bindings.
+- Python bindings
 - Consider a more flexible post-processing mechanism for query
 operations (browse, search, etc).
   -> We have to figure out if that's really necessary.
+- Improve configuration interface
+  -> Use strings for config keys
