--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+NEW in 0.1.5
+============
+
+  * Several fixes
+  * Added initial support for tests
+  * Code moved to gnome.org
+  * Added new documentation: overview, quick start, examples, ...
+  * Updated Vala bindings
+  * Changed GrlConfig: now keys are strings instead of GrlKeyID
+  * Improved build system
+  * Added Vimeo plugin support to test-ui
+
+
 NEW in 0.1.4
 ============
 
