Added more things to the debian/changelog

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ grilo-0.1 (0.1.4-1fremantle) unstable; urgency=low
   * Removed doc, introspection and vala bindings
   * Create null GValue when setting null to grl_data_set_string
   * Optified plugins installation
+  * Avoided strict aliasing.
+  * Added glib to the build depends
 
  -- Xabier Rodriguez Calvar <xrcalvar@igalia.com>  Tue, 01 Jun 2010 09:24:41 +0200
 
