--- a/AUTHORS
+++ b/AUTHORS
@@ -1,9 +1,6 @@
 Iago Toral Quiroga <itoral@igalia.com>
-* Core development
-
+Joaquim Rocha <jrocha@igalia.com>
 Juan A. Suarez Romero <jasuarez@igalia.com>
-* Core development
-
+Simon Pena Placer <spenap@gmail.com>
 Víctor Manuel Jáquez Leal <vjaquez@igalia.com>
-* Vala bindings
-
+Xabier Rodriguez Calvar <xrcalvar@igalia.com>
