--- a/README
+++ b/README
@@ -73,7 +73,7 @@ If you are looking for a step-by-step guide from beginning to end, here it is:
 
 $ git clone git://git.gnome.org/grilo
 $ cd grilo
-$ ./autogen.sh
+$ ./autogen.sh --enable-uninstalled
 $ make
 
 # Building Grilo Plugins and setting GRL_PLUGIN_PATH
