--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
+Damien Lespiau <damien.lespiau@intel.com>
 Iago Toral Quiroga <itoral@igalia.com>
 Joaquim Rocha <jrocha@igalia.com>
 Juan A. Suarez Romero <jasuarez@igalia.com>
