--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
 Damien Lespiau <damien.lespiau@intel.com>
+Guillaume Emont <gemont@igalia.com>
 Iago Toral Quiroga <itoral@igalia.com>
 Joaquim Rocha <jrocha@igalia.com>
 Juan A. Suarez Romero <jasuarez@igalia.com>
