--- a/AUTHORS
+++ b/AUTHORS
@@ -3,6 +3,7 @@ Guillaume Emont <gemont@igalia.com>
 Iago Toral Quiroga <itoral@igalia.com>
 Joaquim Rocha <jrocha@igalia.com>
 Juan A. Suarez Romero <jasuarez@igalia.com>
+Lionel Landwerlin <lionel.g.landwerlin@linux.intel.com>
 Simon Pena Placer <spenap@gmail.com>
 Víctor Manuel Jáquez Leal <vjaquez@igalia.com>
 Xabier Rodriguez Calvar <xrcalvar@igalia.com>
