--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+NEW in 0.1.15
+=============
+
+  * Several fixes
+  * Updated documentation
+  * Updated grl-inspect tool
+
+  * Contributors to this release:
+    Juan A. Suarez Romero <jasuarez@igalia.com>
+
+
 NEW in 0.1.14
 =============
 
