--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,23 @@
+NEW in 0.1.16
+=============
+
+  * Several fixes
+  * Minor improvements in build system
+  * Make Test UI compliant with Gtk+ 3.0
+  * Test UI no more long needs GConf
+  * Lots of updates in documentation
+  * Added manpage for grl-inspect tool
+  * Added new API to handle operation cancellation
+
+  * Contributors to this release:
+    Alberto Garcia <agarcia@igalia.com>
+    Guillaume Emont <guijemont@igalia.com>
+    Iago Toral Quiroga <itoral@igalia.com>
+    Juan A. Suarez Romero <jasuarez@igalia.com>
+    Lionel Landwerlin <lionel.g.landwerlin@linux.intel.com>
+    Víctor Manuel Jáquez Leal <vjaquez@igalia.com>
+
+
 NEW in 0.1.15
 =============
 
