--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,42 @@
+NEW in 0.1.17
+=============
+
+  * Minor improvements in documentation
+  * Well-manage end of search/browse in splitted sources
+  * Minor fixes in build system
+  * Install XML files in the same place as libraries
+  * Restrict loading of a subset of plugins
+  * Added support for Vala 0.14
+  * Fixed some bugs, including:
+    * BGO#657549 - add GRL_METADATA_KEY_TRACK_NUMBER
+    * BGO#657920 - Add Grilo documentation
+
+  * Contributors to this release:
+    Guillaume Emont <guijemont@igalia.com>
+    Juan A. Suarez Romero <jasuarez@igalia.com>
+    Lionel Landwerlin <lionel.g.landwerlin@linux.intel.com>
+
+
+NEW in 0.1.16
+=============
+
+  * Several fixes
+  * Minor improvements in build system
+  * Make Test UI compliant with Gtk+ 3.0
+  * Test UI no more long needs GConf
+  * Lots of updates in documentation
+  * Added manpage for grl-inspect tool
+  * Added new API to handle operation cancellation
+
+  * Contributors to this release:
+    Alberto Garcia <agarcia@igalia.com>
+    Guillaume Emont <guijemont@igalia.com>
+    Iago Toral Quiroga <itoral@igalia.com>
+    Juan A. Suarez Romero <jasuarez@igalia.com>
+    Lionel Landwerlin <lionel.g.landwerlin@linux.intel.com>
+    Víctor Manuel Jáquez Leal <vjaquez@igalia.com>
+
+
 NEW in 0.1.15
 =============
 
