--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,23 @@
+NEW in 0.1.19
+=============
+
+  * Fixes in the Test UI
+  * Improvements in Grilo Net library
+  * Added support for Vala 0.16 and 0.18
+  * Improvements in the build system
+  * Several fixes, including:
+    * BGO#662748 - tracker plugin: support multiple resources in a larger file
+    * BGO#665938 - Do not dist gir_DATA
+    * BGO#672923 - Make it possible to override the user-agent in GrlNetWc
+
+  * Contributors to this release:
+    Alberto Garcia <agarcia@igalia.com>
+    Juan A. Suarez Romero <jasuarez@igalia.com>
+    Sam Thursfield <sam.thursfield@codethink.co.uk>
+    Víctor Manuel Jáquez Leal <vjaquez@igalia.com>
+    Yaakov Selkowitz <yselkowitz@users.sourceforge.net>
+
+
 NEW in 0.1.18
 =============
 
