--- a/AUTHORS
+++ b/AUTHORS
@@ -4,6 +4,7 @@ Iago Toral Quiroga <itoral@igalia.com>
 Joaquim Rocha <jrocha@igalia.com>
 Juan A. Suarez Romero <jasuarez@igalia.com>
 Lionel Landwerlin <lionel.g.landwerlin@linux.intel.com>
+Mathias Hasselmann <mathias@openismus.com>
 Sam Thursfield <sam.thursfield@codethink.co.uk>
 Simon Pena Placer <spenap@gmail.com>
 Víctor Manuel Jáquez Leal <vjaquez@igalia.com>
