--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,7 @@
 Damien Lespiau <damien.lespiau@intel.com>
 Guillaume Emont <gemont@igalia.com>
 Iago Toral Quiroga <itoral@igalia.com>
+Jens Georg <jensg@openismus.com>
 Joaquim Rocha <jrocha@igalia.com>
 Juan A. Suarez Romero <jasuarez@igalia.com>
 Lionel Landwerlin <lionel.g.landwerlin@linux.intel.com>
