--- a/AUTHORS
+++ b/AUTHORS
@@ -6,6 +6,7 @@ Joaquim Rocha <jrocha@igalia.com>
 Juan A. Suarez Romero <jasuarez@igalia.com>
 Lionel Landwerlin <lionel.g.landwerlin@linux.intel.com>
 Mathias Hasselmann <mathias@openismus.com>
+Murray Cumming <murrayc@murrayc.com>
 Sam Thursfield <sam.thursfield@codethink.co.uk>
 Simon Pena Placer <spenap@gmail.com>
 Víctor Manuel Jáquez Leal <vjaquez@igalia.com>
