--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
+Bastien Nocera <hadess@hadess.net>
 Damien Lespiau <damien.lespiau@intel.com>
 Guillaume Emont <gemont@igalia.com>
 Iago Toral Quiroga <itoral@igalia.com>
