grl-inspect: Wait 1 second before showing results
Wait for sources that are created asynchronously to be active before inspecting
them.

--- a/grl-inspect.1
+++ b/grl-inspect.1
@@ -44,6 +44,7 @@ Show summary of all options.
 .BI \-d,\ \-\-delay " seconds"
 Wait for some seconds before showing results. Useful when plugins may
 need some time for the source discovery process (example: UPnP).
+If not specified, by default it waits 1 second.
 .TP
 .BI \-c,\ \-\-config " config-file"
 Configuration file to use with the plugins.
